css updates to fix alignment for services section on mobile

--- a/malena/resources/css/style.css
+++ b/malena/resources/css/style.css
@@ -32,7 +32,7 @@ http://lifeinsys.com
 }
 
 #services-list {
-    /* padding-right: 3rem; */
+    padding-right: 1rem;
 }
 
 /* #mission-block {
